# neural_network_visualization

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
resources/: soybean.csv  soybean.csv.gsasset
resources/windows/: icon.rc
scripts/linux/: build.sh  build_run.sh
scripts/windows/: build.bat  build_run.bat
source/gensou_engine/: CMakeLists.txt
source/gensou_engine/include/gensou/: audio.h  components.h  core.h  game_statics.h  scene.h  scene_actor.h
source/gensou_engine/include/gensou/platform/android/: ads.h  google_services.h
source/gensou_engine/include/gensou/renderer/: lines.h  texture.h
source/gensou_engine/res/fonts/opensans/: opensans_bold_ttf.gsasset
source/gensou_engine/res/shaders/spir-v/: cube.frag.spv  quad.frag.spv  quad.vert.spv  screen_quad.frag.spv  ui.frag.spv
source/gensou_engine/res/shaders/src/: cube.frag.glsl  cube.vert.glsl  gaussian_blur.comp.glsl  line.frag.glsl  line.vert.glsl  quad.frag.glsl  quad.vert.glsl  screen_quad.frag.glsl  screen_quad.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  ui.frag.glsl  ui.vert.glsl
source/gensou_engine/res/textures/: loading.gsasset  loading_spinner.gsasset  white.gsasset
source/gensou_engine/src/: gspch.h
source/gensou_engine/src/core/: cmd_queue.cpp  cmd_queue.h  core.h  engine_events.cpp  engine_events.h  entry.cpp  event.h  gensou_app.cpp  gensou_app.h  input.cpp  input.h  input_codes.h  log.cpp  log.h  misc.cpp  misc.h  runtime.cpp  runtime.h  system.cpp  system.h  time.h  uuid.cpp  uuid.h  window.h
source/gensou_engine/src/platform/: platform.h
source/gensou_engine/src/platform/android/: android_ads.cpp  android_ads.h  android_google_services.cpp  android_google_services.h  android_jni.h  android_platform.cpp  android_platform.h
source/gensou_engine/src/platform/linux/: linux_platform.cpp  linux_platform.h
source/gensou_engine/src/platform/windows/: windows_platform.cpp  windows_platform.h
source/gensou_engine/src/renderer/: buffer.cpp  buffer.h  command_manager.cpp  command_manager.h  descriptor_set.cpp  descriptor_set.h  device.cpp  device.h  framebuffer.h  image.cpp  image.h  memory_manager.cpp  memory_manager.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  skybox.cpp  skybox.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  ui_renderer.cpp  ui_renderer.h  validation_layers.h
source/gensou_engine/src/renderer/geometry/: cube.cpp  cube.h  lines.cpp  lines.h
source/gensou_engine/src/scene/: audio_clip_component.cpp  audio_clip_component.h  audio_mixer.cpp  audio_mixer.h  components.cpp  components.h  default_loading_scene.h  game_instance.cpp  game_instance.h  game_object.cpp  game_object.h  game_statics.cpp  game_statics.h  particle_system.cpp  particle_system.h  scene.cpp  scene.h  scene_actor.cpp  scene_actor.h  sprite.h
source/neural_network_visualization/: CMakeLists.txt  activation_functions.hpp  application_instance.cpp  application_instance.h  application_scene.cpp  application_scene.h  model.cpp  model.h  scene_camera.cpp  scene_camera.h  simd.hpp  soybean_data.h  widgets.cpp  widgets.h
